@@ -19,6 +19,7 @@
 
 #define GLOBAL_INTERFACE_KEY "/desktop/gnome/interface"
 
+static gboolean no_gconf = FALSE;
 
 static GConfEnumStringPair toolbar_styles[] = {
         { BONOBO_UI_TOOLBAR_STYLE_PRIORITY_TEXT, "text" },
@@ -59,6 +60,9 @@ update_engines_idle_callback (gpointer data)
 void
 bonobo_ui_preferences_add_engine (BonoboUIEngine *engine)
 {
+	if (no_gconf)
+		return;
+
 	if (!client)
 		client = gconf_client_get_default ();
 	
@@ -77,6 +81,9 @@ bonobo_ui_preferences_add_engine (BonoboUIEngine *engine)
 void
 bonobo_ui_preferences_remove_engine (BonoboUIEngine *engine)
 {
+	if (no_gconf)
+		return;
+
 	if (!g_slist_find (engine_list, engine))
 		return;
 
@@ -100,6 +107,9 @@ get (const char *key, gboolean def)
 {
 	gboolean ret;
 	GError  *err = NULL;
+
+	if (no_gconf)
+		return def;
 
 	if (!client)					
 		client = gconf_client_get_default ();	
@@ -160,6 +170,9 @@ bonobo_ui_preferences_get_toolbar_style (void)
 	BonoboUIToolbarStyle style;
 	char *str;
 
+	if (no_gconf)
+		return BONOBO_UI_TOOLBAR_STYLE_ICONS_AND_TEXT;
+
 	if (!client)
 		client = gconf_client_get_default ();
 
@@ -207,4 +220,10 @@ keys_changed_fn (GConfClient *client, guint cnxn_id, GConfEntry *entry, gpointer
 		return;
 
 	update_engines_idle_id = gtk_idle_add (update_engines_idle_callback, NULL);
+}
+
+void
+bonobo_ui_gconf_leaks_refs (void)
+{
+	no_gconf = TRUE;
 }
